--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "if_tun.h": "c"
+        "if_tun.h": "c",
+        "libflux_execution.h": "c",
+        "libgraph.h": "c"
     }
 }
