:sparkles:  Update architecture

--- a/Reseau/Makefile
+++ b/Reseau/Makefile
@@ -1,31 +1,29 @@
 #
-# Makefile pour generer les executables du pont virtuel
+# Makefile pour la bibliotheque graphique
 #
 
-OBJS_SWITCH=libreseau.o serveur.o
-OBJS_CLIENT=libreseau.o client.o
-
-BIBLIOTHEQUES =-L ../Flux_execution -lflux_execution
-CFLAGS += -Wall -DDEBUG  -I ../Flux_execution
-
-all: serveur client
+SOURCES = $(wildcard *.c)
+OBJETS = $(SOURCES:.c=.o)
+CIBLE = libreseau.a
 
 #
-# La cible de nettoyage
+# Nom de la cible principale
+#
+
+all: $(CIBLE)
+
+#
+# Cible de nettoyage
 #
 
 clean: 
-	rm -f core *.o serveur client
+	rm -f core *.o $(CIBLE)
 
 #
-# Les cibles
+# Dependances pour la bibliotheque
 #
 
-serveur:	$(OBJS_SWITCH)
-	$(CC) $(CFLAGS) -o $@ $(OBJS_SWITCH) $(BIBLIOTHEQUES)
-client:	$(OBJS_CLIENT)
-	$(CC) $(CFLAGS) -o $@ $(OBJS_CLIENT)
+$(CIBLE): $(OBJETS)
+	$(AR) rs $@ $?
 
-libreseau.o: libreseau.c libreseau.h
-serveur.o: serveur.c libreseau.h
-client.o: client.c libreseau.h
+$(CIBLE:.a=).o: $(CIBLE:.a=).c $(CIBLE:.a=).h
