:sparkles: Multiple client access

--- a/ServeurJeu/Makefile
+++ b/ServeurJeu/Makefile
@@ -4,7 +4,7 @@
 
 SOURCES = $(wildcard *.c)
 OBJETS = $(SOURCES:.c=.o)
-BIBLIOTHEQUES = -L ../Reseau -lreseau -L ../Flux_execution -lflux_execution
+BIBLIOTHEQUES = -L ../Reseau -lreseau -L ../Flux_execution -lflux_execution -lpthread
 CFLAGS += -Wall -DDEBUG -I ../Reseau -I ../Flux_execution
 CIBLE = serveur
 
