:sparkles: UDP OK, inscription des clients

--- a/ServeurJeu/Makefile
+++ b/ServeurJeu/Makefile
@@ -4,8 +4,8 @@
 
 SOURCES = $(wildcard *.c)
 OBJETS = $(SOURCES:.c=.o)
-BIBLIOTHEQUES = -L ../Reseau -lreseau -L ../Flux_execution -lflux_execution -lpthread
-CFLAGS += -Wall -DDEBUG -I ../Reseau -I ../Flux_execution -I ../Protocole
+BIBLIOTHEQUES = -L ../Reseau -lreseau -L ../Flux_execution -lflux_execution -lpthread -L ../Gestio_list -lgestion_list
+CFLAGS += -Wall -DDEBUG -I ../Reseau -I ../Flux_execution -I ../Protocole -I ../Gestio_list
 CIBLE = serveur
 
 #
